# RemoteDisplay

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
cmake/: FindFreeRDP.cmake
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  config.h.in  cursorchangenotifier.cpp  cursorchangenotifier.h  freerdpclient.cpp  freerdpclient.h  freerdpeventloop.cpp  freerdphelpers.cpp  freerdphelpers.h  pointerchangesink.h  remotedisplaywidget.cpp  remotedisplaywidget.h  remotedisplaywidget_p.h
